Change Cursor behavior to match spec

spec: https://drafts.csswg.org/css-ui-3/#cursor

1. When cursor:auto, cursor should be "text" over selectable text,
default otherwise.
Changed SelectAutoCursor and ShouldShowIBeamForNode to match spec.
Use UA stylesheet to achieve different cursor on different element.
(browser default behavior)

2. When cursor:text, use VerticalTextCursor when vertical-text.

3. Show pointer cursor when mouse hovering resizers no matter what
 cursor style set for its owner element.

4. When selecting anchor text, use I-beam when style cursor:pointer,
otherwise keep style cursor.


Bug: 737452
Change-Id: I71e0a63b1518cde261755c9339eb62f8e3e2c21f
Reviewed-on: https://chromium-review.googlesource.com/600252
Commit-Queue: Ella Ge <eirage@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: nainar <nainar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501293}
Former-commit-id: 53a46aede88dac4189a493f1e6eb30868aa17929